style changes, clean up, new comments

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,5 +5,13 @@
 }
 
 body{
-  background-color: antiquewhite;
+  background: url('../images/background-mobile.jpg');
+  background-position: center;
+}
+
+/* Media Query */
+@media screen and (min-width: 600px) {
+  body{
+    background: url('../images/background.jpg');
+  }
 }
