--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,13 +5,6 @@
 }
 
 body{
-  background: url('../images/background-mobile.jpg');
-  background-position: center;
+  background-color: #B0B0B0;
 }
 
-/* Media Query */
-@media screen and (min-width: 600px) {
-  body{
-    background: url('../images/background.jpg');
-  }
-}
